# asr-cpu

./: .gitignore  Dockerfile  docker-compose.yml  prepare_data.py  pyproject.toml  run_all.sh  run_benchmark.py
benchmark/: metrics.py  profiler.py  runner.py
benchmark/backends/: __init__.py  base.py  faster_whisper.py  onnx_whisper.py  openai_whisper.py  torch_whisper.py
benchmark/dataset/: __init__.py  librispeech.py  protocol.py
reports/: benchmark_summary.json  macos_arm64_2026-04-01.md
